Add IOT pm2.5 sos monitor noise people Page #1

--- a/views/iotAir.ejs
+++ b/views/iotAir.ejs
@@ -28,7 +28,7 @@
 </div>
     
     <% }else{ %> 
-        <div class="card bg-secondary text-white " style="width: 16rem;"><div class="card-body"> 
+        <div class="card bg-secondary text-white mx-auto" style="width: 16rem;"><div class="card-body"> 
             Particulate Matter  <p> <h3> Status : OFFLINE 
         </h2></p> </div></div> <br>
     </div>
