--- a/views/user/useriotNoise.ejs
+++ b/views/user/useriotNoise.ejs
@@ -1,17 +1,17 @@
-<%- include('_header') %>
+<%- include('_userheader') %>
 
-<% JSON.stringify(showdata) %>
+<% JSON.stringify(noisedata) %>
  
 
-<h1> Monitor Device </h1>
+<h1> Noise Pollution Device </h1>
 
 
     <div class="container text-left">
         <div class="row row-cols-2">
           <div class="col">Hardware Name : <%= data.hwname %></div>
-          <div class="col">Owner Name : <%= data.name %></div>
+          
           <div class="col">Mac Address : <%= data.mac %></div>
-          <div class="col">Owner Email : <%= data.email %></div>
+          
           <div class="col">Site : <%= data.sitename %></div>
           
           <div class="col">Add Date : <%= data.adddate.toLocaleDateString() %></div>
@@ -20,24 +20,23 @@
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-sm-10 ">
-
-<% if(showdata!=null){ %>
+<div class="row">
+   <div class="col-sm-10 ">
+<% if(noisedata!=null){ %>
     <div class="card bg-success text-white mx-auto" style="width: 16rem;"><div class="card-body"> 
-        Monitor LED <p> <h3> Display : <%= showdata  %>
+        Noise <p> <h3> dB :  <%= noisedata  %>
     </h2></p> </div></div> <br>
 </div>
-
     
     <% }else{ %> 
         <div class="card bg-secondary text-white mx-auto" style="width: 16rem;"><div class="card-body"> 
-            Monitor LED  <p> <h3> Status : OFFLINE 
+            Noise <p> <h3> Status : OFFLINE 
         </h2></p> </div></div> <br>
     </div>
+        
     <% } %> 
 </div>
 <BR>
-<div class="text-center"> <a href="/owner" class="btn btn-danger"> Back </a>  </div>
+<div class="text-center"> <a href="/user/owner" class="btn btn-danger"> Back </a>  </div>
         
-<%- include ('_footer') %>
+<%- include ('_userfooter') %>
