--- a/views/user/userowner.ejs
+++ b/views/user/userowner.ejs
@@ -25,14 +25,14 @@
             <td> <%= data[i].hwname %> </td>        
             <td> <%= data[i].adddate.toLocaleDateString('el-GR') %> </td>   
             <td> <%= data[i].ownerComment %> </td> 
-            <td> <% if(!data[i].sitename) { %> <a href="/user/owner/site/<%= data[i].deviceid %>/<%= data[i].uid %>" class="btn btn-info"> Set </a> <% }else{ %><%= data[i].sitename %> <a href="/user/owner/clearsite/<%= data[i].deviceid %>/<%= data[i].uid %>" class="btn btn-warning"> Clear </a> <% } %> </td>
-            <td> <% if(!data[i].roomname) { %> <a href="/user/owner/room/<%= data[i].deviceid %>/<%= data[i].uid %>/<%= data[i].sid %>" class="btn btn-info"> Set </a> <% }else{ %> <%= data[i].roomname %> <a href="/user/owner/clearroom/<%= data[i].deviceid %>/<%= data[i].uid %>" class="btn btn-warning"> Clear </a> <% } %>  </td>
+            <td> <% if(!data[i].sitename) { %> <a href="/user/owner/site/<%= data[i].deviceid %>" class="btn btn-info"> Set </a> <% }else{ %><%= data[i].sitename %> <a href="/user/owner/clearsite/<%= data[i].deviceid %>" class="btn btn-warning"> Clear </a> <% } %> </td>
+            <td> <% if(!data[i].roomname) { %> <a href="/user/owner/room/<%= data[i].deviceid %>/<%= data[i].sid %>" class="btn btn-info"> Set </a> <% }else{ %> <%= data[i].roomname %> <a href="/user/owner/clearroom/<%= data[i].deviceid %>" class="btn btn-warning"> Clear </a> <% } %>  </td>
             
             <td>  
-              <form method="GET" action="/user/owner/delete/<%= data[i].deviceid %>/<%= data[i].uid %>"  onsubmit="return submitForm(this);">  <input class="btn btn-danger" type="submit" value="Del"/> </form>
+              <form method="GET" action="/user/owner/delete/<%= data[i].deviceid %>"  onsubmit="return submitForm(this);">  <input class="btn btn-danger" type="submit" value="Del"/> </form>
             </td>            
             <td>  
-             <a href="/user/iot/<%= data[i].datapoint %>/<%= data[i].deviceid %>/<%= data[i].uid %>" class="btn btn-success"> Show </a>
+             <a href="/user/iot/<%= data[i].datapoint %>/<%= data[i].deviceid %>" class="btn btn-success"> Show </a>
             </td>
         </tr>
     <%  } } %>
