--- a/views/user/useriotAir.ejs
+++ b/views/user/useriotAir.ejs
@@ -1,9 +1,9 @@
-<%- include('_header') %>
+<%- include('_userheader') %>
 
-<% JSON.stringify(showdata) %>
+<% JSON.stringify(pm25data) %>
  
 
-<h1> Monitor Device </h1>
+<h1> PM 2.5 Device </h1>
 
 
     <div class="container text-left">
@@ -19,25 +19,22 @@
           <div class="col"></div>
         </div>
       </div>
-
       <div class="row">
         <div class="col-sm-10 ">
-
-<% if(showdata!=null){ %>
+<% if(pm25data!=null){ %>
     <div class="card bg-success text-white mx-auto" style="width: 16rem;"><div class="card-body"> 
-        Monitor LED <p> <h3> Display : <%= showdata  %>
+        Particulate Matter  <p> <h3> PM 2.5 : <%= pm25data  %>
     </h2></p> </div></div> <br>
 </div>
-
     
     <% }else{ %> 
         <div class="card bg-secondary text-white mx-auto" style="width: 16rem;"><div class="card-body"> 
-            Monitor LED  <p> <h3> Status : OFFLINE 
+            Particulate Matter  <p> <h3> Status : OFFLINE 
         </h2></p> </div></div> <br>
     </div>
     <% } %> 
 </div>
 <BR>
-<div class="text-center"> <a href="/owner" class="btn btn-danger"> Back </a>  </div>
+<div class="text-center"> <a href="/user/owner" class="btn btn-danger"> Back </a>  </div>
         
-<%- include ('_footer') %>
+<%- include ('_userfooter') %>
