--- a/views/user/useriotAirDay.ejs
+++ b/views/user/useriotAirDay.ejs
@@ -1,17 +1,18 @@
 <%- include('_userheader') %>
 
 <% JSON.stringify(pm25data) %>
+<% JSON.stringify(pm25time) %>
 <% JSON.stringify(data) %>
 
-<h1> PM 2.5 Device </h1>
+<h1> PM 2.5 Device (Day)</h1>
 
 
     <div class="container text-left">
         <div class="row row-cols-2">
           <div class="col">Hardware Name : <%= data.hwname %></div>
-          <div class="col">Owner Name : <%= data.name %></div>
+         
           <div class="col">Mac Address : <%= data.mac %></div>
-          <div class="col">Owner Email : <%= data.email %></div>
+          
           <div class="col">Site : <%= data.sitename %></div>
           
           <div class="col">Add Date : <%= data.adddate.toLocaleDateString() %></div>
@@ -21,19 +22,11 @@
       </div>
       <div class="row">
         <div class="col-sm-10 ">
-<% if(pm25data!=null){ %>
-    <div class="card bg-success text-white mx-auto" style="width: 16rem;"><div class="card-body"> 
-        Particulate Matter  <p> <h3> PM 2.5 : <%= pm25data  %>
-    </h2></p> </div></div> <br>
-</div>
-    
-    <% }else{ %> 
-        <div class="card bg-secondary text-white mx-auto" style="width: 16rem;"><div class="card-body"> 
-            Particulate Matter  <p> <h3> Status : OFFLINE 
-        </h2></p> </div></div> <br>
-    </div>
-    <% } %> 
-</div>
+
+
+
+
+
 <BR>
     <div class="container text-center"> <div class="row row-cols-3">
 <div class="text-center"> <a href="/user/iot/<%= data.datapoint %>/day/<%= data.did %>" class="btn btn-info" style=" height:40px;width:200px;"> Day </a>  </div>
@@ -41,6 +34,33 @@
 <div  class="text-center"> <a href="/user/iot/<%= data.datapoint %>/month/<%= data.did %>" class="btn btn-info" style=" height:40px;width:200px;"> Month </a>  </div>
     </div>  </div>
 <BR>
+    
+<table class="table table-responsive mx-auto text-center" >
+    <thead>
+      <tr>
+        <th scope="col">No</th>
+        <th scope="col">Date Time </th>
+        <th scope="col">PM 2.5</th>
+      </tr>
+  </thead>
+  <tbody>
+      <% if(data){ for(var i=pm25data.length-2;i>=0;i--){ %>
+        <tr>
+            <td> <%= (pm25data.length-i-1) %> </td>
+            
+            <% var startTime = new Date(pm25time[i]); %> 
+            
+            <td> <%= startTime.toDateString() %> <%= startTime.toTimeString().substring(0, 8) %>  </td>  
+            <td> <%= pm25data[i].toFixed(2) %>  </td>        
+            
+        </tr>
+    <%  } } %>
+
+
+    </thead>
+  </tbody>
+</table>
+
 <div class="text-center"> <a href="/user/owner" class="btn btn-danger"> Back </a>  </div>
         
 <%- include ('_userfooter') %>
