Add SHOW DATA DAY WEEK MONTH PM2.5 + NOISE #1

--- a/views/user/useriotNoise.ejs
+++ b/views/user/useriotNoise.ejs
@@ -38,10 +38,12 @@
 </div>
 <BR>
     <div class="container text-center"> <div class="row row-cols-3">
-<div class="text-center"> <a href="/user/iot/<%= data.datapoint %>/day/<%= data.uid %>" class="btn btn-info" style=" height:40px;width:200px;"> Day </a>  </div>
-<div  class="text-center"> <a href="/user/iot/<%= data.datapoint %>/week/<%= data.uid %>" class="btn btn-info" style=" height:40px;width:200px;"> Week </a>  </div>
-<div  class="text-center"> <a href="/user/iot/<%= data.datapoint %>/month/<%= data.uid %>" class="btn btn-info" style=" height:40px;width:200px;"> Month </a>  </div>
+<div class="text-center"> <a href="/user/iot/max/day/<%= data.did %>" class="btn btn-info" style=" height:40px;width:200px;"> Day </a>  </div>
+<div  class="text-center"> <a href="/user/iot/max/week/<%= data.did %>" class="btn btn-info" style=" height:40px;width:200px;"> Week </a>  </div>
+<div  class="text-center"> <a href="/user/iot/max/month/<%= data.did %>" class="btn btn-info" style=" height:40px;width:200px;"> Month </a>  </div>
     </div>  </div>
+<BR>
+    
 <BR>
 <div class="text-center"> <a href="/user/owner" class="btn btn-danger"> Back </a>  </div>
         
