--- a/views/user/useriotMonth.ejs
+++ b/views/user/useriotMonth.ejs
@@ -1,19 +1,17 @@
 <%- include('_userheader') %>
 
-<% JSON.stringify(pm25data) %>
+<% JSON.stringify(valuedata) %>
+<% JSON.stringify(timedata) %>
 <% JSON.stringify(data) %>
 
-<h1> PM 2.5 Device </h1>
+<h1> <%= data.hwname %> Device (Month)</h1>
 
 
     <div class="container text-left">
         <div class="row row-cols-2">
-          <div class="col">Hardware Name : <%= data.hwname %></div>
-          <div class="col">Owner Name : <%= data.name %></div>
+          <div class="col">Hardware Name : <%= data.hwname %></div> 
           <div class="col">Mac Address : <%= data.mac %></div>
-          <div class="col">Owner Email : <%= data.email %></div>
           <div class="col">Site : <%= data.sitename %></div>
-          
           <div class="col">Add Date : <%= data.adddate.toLocaleDateString() %></div>
           <div class="col">Room : <%= data.roomname %></div>
           <div class="col"></div>
@@ -21,19 +19,7 @@
       </div>
       <div class="row">
         <div class="col-sm-10 ">
-<% if(pm25data!=null){ %>
-    <div class="card bg-success text-white mx-auto" style="width: 16rem;"><div class="card-body"> 
-        Particulate Matter  <p> <h3> PM 2.5 : <%= pm25data  %>
-    </h2></p> </div></div> <br>
-</div>
-    
-    <% }else{ %> 
-        <div class="card bg-secondary text-white mx-auto" style="width: 16rem;"><div class="card-body"> 
-            Particulate Matter  <p> <h3> Status : OFFLINE 
-        </h2></p> </div></div> <br>
-    </div>
-    <% } %> 
-</div>
+
 <BR>
     <div class="container text-center"> <div class="row row-cols-3">
 <div class="text-center"> <a href="/user/iot/day/<%= data.did %>" class="btn btn-info" style=" height:40px;width:200px;"> Day </a>  </div>
@@ -41,6 +27,33 @@
 <div  class="text-center"> <a href="/user/iot/month/<%= data.did %>" class="btn btn-info" style=" height:40px;width:200px;"> Month </a>  </div>
     </div>  </div>
 <BR>
+    
+<table class="table table-responsive mx-auto text-center" >
+    <thead>
+      <tr>
+        <th scope="col">No</th>
+        <th scope="col">Date Time </th>
+        <th scope="col">Data</th>
+      </tr>
+  </thead>
+  <tbody>
+      <% if(data){ for(var i=valuedata.length-2;i>=0;i--){ %>
+        <tr>
+            <td> <%= (valuedata.length-i-1) %> </td>
+            
+            <% var startTime = new Date(timedata[i]); %> 
+            
+            <td> <%= startTime.toDateString() %> </td>  
+            <td> <%= valuedata[i].toFixed(2) %>  </td>        
+            
+        </tr>
+    <%  } } %>
+
+
+    </thead>
+  </tbody>
+</table>
+
 <div class="text-center"> <a href="/user/owner" class="btn btn-danger"> Back </a>  </div>
         
 <%- include ('_userfooter') %>
