Add IOT SOFTWARE VERSION

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -55,6 +55,7 @@
           <ul class="navbar-nav justify-content-center align-items-center fs-5 flex-grow-1 pe-3">
             <li class="nav-item mx-2"><a class="nav-item nav-link" href="/home">Home <span class="sr-only"></span></a></li>
               <li class="nav-item mx-2"><a class="nav-item nav-link" href="/hardware">Hardware</a></li>
+              <li class="nav-item mx-2"><a class="nav-item nav-link" href="/software">Software</a></li>
                 <li class="nav-item mx-2"><a class="nav-item nav-link" href="/device">Device</a></li>
                   <li class="nav-item mx-2"><a class="nav-item nav-link" href="/register">Register</a></li>
                     <li class="nav-item mx-2"><a class="nav-item nav-link" href="/user">User</a></li>
