--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,6 +12,12 @@
     </div>
     <div class="col-sm-3">
         <div class="card bg-primary text-white " style="width: 16rem;"><div class="card-body"> 
+            SOFTWARE <p> <h3> <%= JSON.stringify(software.software) %>
+        </h2></p> </div></div> <br>
+    </div>
+
+    <div class="col-sm-3">
+        <div class="card bg-primary text-white " style="width: 16rem;"><div class="card-body"> 
             DEVICE  <p> <h3> <%= JSON.stringify(device.device) %>
         </h2></p> </div></div> <br>
     </div>
@@ -20,16 +26,17 @@
             REGISTER  <p> <h3> <%= JSON.stringify(register.register) %>
         </h2></p> </div></div> <br>
     </div>
-    <div class="col-sm-3">
-        <div class="card bg-primary text-white " style="width: 16rem;"><div class="card-body"> 
-            USER  <p> <h3> <%= JSON.stringify(user.user) %>
-        </h2></p> </div></div> <br>
-    </div>
 </div>
 
   
 
 <div class="row">
+    <div class="col-sm-3">
+        <div class="card bg-primary text-white " style="width: 16rem;"><div class="card-body"> 
+            USER  <p> <h3> <%= JSON.stringify(user.user) %>
+        </h2></p> </div></div> <br>
+    </div>
+
     <div class="col-sm-3">
         <div class="card bg-primary text-white " style="width: 16rem;"><div class="card-body"> 
             SITE  <p> <h3> <%= JSON.stringify(site.site) %>
