Add IOT SOFTWARE HISTORY

--- a/views/software.ejs
+++ b/views/software.ejs
@@ -12,8 +12,8 @@
         <th scope="col">Version</th>
         <th scope="col">Date</th>
         <th scope="col">Comment</th>
-        <th scope="col"> Action</th>
-        <th scope="col">   <a href="/software/add" class="btn btn-primary" > Add </a>  </th>
+        <th scope="col"> Action  </th>
+        <th scope="col">    <a href="/software/history" class="btn btn-warning" > History </a> <a href="/software/add" class="btn btn-primary" > Add </a>  </th>
       </tr>
     </thead>
     <tbody>
