--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,6 +43,14 @@
 <a href="#">Forgot Password</a>
 </div>
 </div>
+<div class="text-center"></div>
+						<span class="txt1">
+							Create an account?
+						</span>
+						<a href="#" class="txt2 hov1">
+							Sign up
+						</a>
+					</div>
 <div class="form-group">
 <button type="submit" class="btn btn-primary rounded submit p-3 px-5">Get Started</button>
 </div>
