--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,10 +34,11 @@
 </div>
 <div class="form-group d-md-flex">
 <div class="w-50">
-<label class="checkbox-wrap checkbox-primary">Remember Me
-<input type="checkbox" checked>
+<a href="#">
+<label class="checkbox-wrap checkbox-primary"> Sign up
 <span class="checkmark"></span>
 </label>
+</a>
 </div>
 <div class="w-50 text-md-right">
 <a href="#">Forgot Password</a>
@@ -47,14 +48,7 @@
 <button type="submit" class="btn btn-primary rounded submit p-3 px-5">Get Started</button>
 </div>
 
-<div class="text-center"></div>
-	<span class="txt1">
-	Create an account?
-	</span>
-	<a href="#" class="txt2 hov1">
-			Sign up
-	</a>
-</div>
+
 
 </form>
 </div>
