ADD Create User in Index #4

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,11 +34,7 @@
 </div>
 <div class="form-group d-md-flex">
 <div class="w-50">
-<a href="#">
-<label class="checkbox-wrap checkbox-primary"> Sign up
-<span class="checkmark"></span>
-</label>
-</a>
+  Create an account? <a href="#"> Sign up  </a>
 </div>
 <div class="w-50 text-md-right">
 <a href="#">Forgot Password</a>
