--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,10 +34,10 @@
 </div>
 <div class="form-group d-md-flex">
 <div class="w-50">
-  Create an account? <a href="#"> Sign up  </a>
+  <a href="#"> Sign up ! </a>
 </div>
 <div class="w-50 text-md-right">
-<a href="#">Forgot Password</a>
+  <a href="#">Forgot Password</a>
 </div>
 </div>
 <div class="form-group">
