--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,17 +34,20 @@
 </div>
 <div class="form-group d-md-flex">
 <div class="w-50">
-  <a href="#"> Sign up ! </a>
+<label class="checkbox-wrap checkbox-primary">Remember Me
+<input type="checkbox" checked>
+<span class="checkmark"></span>
+</label>
 </div>
 <div class="w-50 text-md-right">
-  <a href="#">Forgot Password</a>
+<a href="#">Forgot Password</a>
 </div>
 </div>
 <div class="form-group">
 <button type="submit" class="btn btn-primary rounded submit p-3 px-5">Get Started</button>
 </div>
 
-
+</div>
 
 </form>
 </div>
