--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-<title>Thesaban IOT Login</title>
+<title>Thesaban IOT Sign Up</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
@@ -24,27 +24,21 @@
 <div class="icon d-flex align-items-center justify-content-center">
 <span class="fa fa-user-o"></span>
 </div>
-<h3 class="text-center mb-4">Have an account?</h3>
-<form action="/" class="login-form" method="post">
+<h3 class="text-center mb-4">Create an account?</h3>
+<form action="/createuser" class="login-form" method="post">
 <div class="form-group">
-<input type="text" name="username" class="form-control rounded-left" placeholder="Username" required>
+<input type="text" name="name" class="form-control rounded-left" placeholder="Name" required>
 </div>
 <div class="form-group d-flex">
-<input type="password" name="password" class="form-control rounded-left" placeholder="Password" required>
+<input type="password" name="email" class="form-control rounded-left" placeholder="Email" required>
 </div>
-<div class="form-group d-md-flex">
-<div class="w-50">
-  Create User? <a href="/signup"> Sign up </a>
+<div class="form-group d-flex">
+<input type="password" name="phone" class="form-control rounded-left" placeholder="Phone" required>
 </div>
-<div class="w-50 text-md-right">
-  <a href="#">Forgot Password</a>
-</div>
-</div>
+
 <div class="form-group">
-<button type="submit" class="btn btn-primary rounded submit p-3 px-5">Get Started</button>
+<button type="submit" class="btn btn-primary rounded submit p-3 px-5">Register</button>
 </div>
-
-
 
 </form>
 </div>
