--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
 </div>
 <div class="form-group d-md-flex">
 <div class="w-50">
-  Create User? <a href="/signup"> Sign up </a>
+<a href="/signup"> Sign up </a>
 </div>
 <div class="w-50 text-md-right">
   <a href="#">Forgot Password</a>
