--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -25,7 +25,7 @@
 <span class="fa fa-user-o"></span>
 </div>
 <h3 class="text-center mb-4">Create an account?</h3>
-<form action="/createuser" class="login-form" method="post">
+<form action="/register" class="login-form" method="post">
 <div class="form-group">
 <input type="text" name="name" class="form-control rounded-left" placeholder="Name" required>
 </div>
