--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -30,10 +30,10 @@
 <input type="text" name="name" class="form-control rounded-left" placeholder="Name" required>
 </div>
 <div class="form-group d-flex">
-<input type="password" name="email" class="form-control rounded-left" placeholder="Email" required>
+<input type="text" name="email" class="form-control rounded-left" placeholder="Email" required>
 </div>
 <div class="form-group d-flex">
-<input type="password" name="phone" class="form-control rounded-left" placeholder="Phone" required>
+<input type="text" name="phone" class="form-control rounded-left" placeholder="Phone" required>
 </div>
 
 <div class="form-group">
