--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
 <h3 class="text-center mb-4">Have an account?</h3>
 <form action="/" class="login-form" method="post">
 <div class="form-group">
-<input type="text" name="username" class="form-control rounded-left" placeholder="Username" required>
+<input type="text" name="username" class="form-control rounded-left" placeholder="Email" required>
 </div>
 <div class="form-group d-flex">
 <input type="password" name="password" class="form-control rounded-left" placeholder="Password" required>
