--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -30,7 +30,7 @@
 <input type="text" name="name" class="form-control rounded-left" placeholder="Name" required>
 </div>
 <div class="form-group d-flex">
-<input type="text" name="email" class="form-control rounded-left" placeholder="Email" required>
+<input type="email" name="email" class="form-control rounded-left" placeholder="Email" required>
 </div>
 <div class="form-group d-flex">
 <input type="text" name="phone" class="form-control rounded-left" placeholder="Phone" required>
