--- a/views/iotESP01.ejs
+++ b/views/iotESP01.ejs
@@ -3,6 +3,7 @@
 <% JSON.stringify(valuedata) %>
  
 
+
 <h1> ESP01 Device </h1>
 
 
@@ -24,8 +25,9 @@
         <button class="btn btn-success btn-lg" type="button"> RSSI : <%= valuedata  %> </button>
     </div>
     <% }else{ %> 
-        <div class="d-grid gap-2 col-6 mx-auto">
-            <button class="btn btn-secondary btn-lg" type="button"> Status : OFFLINE </button>
+        <div class="card bg-secondary text-white mx-auto" style="width: 16rem;"><div class="card-body"> 
+            ESP01 Node <p> <h3> Status : OFFLINE </h3>
+            </p> </div></div> <br>
         </div>
     <% } %> 
 
