--- a/views/iotSOS.ejs
+++ b/views/iotSOS.ejs
@@ -28,18 +28,21 @@
             
         
     <% if(sosdata==1){%> 
+    
         <div class="card bg-success text-white mx-auto" style="width: 16rem;"><div class="card-body"> 
-            SOS Node <p> <h3> Status : ONLINE
-        </h2></p> </div></div> <br>
-    </div>
+            SOS Node <p> <h3> Status : ONLINE  (rssi:<%= valuedata  %>)</h3>
+            </p> </div></div> <br>
+        </div>
+
         
     <% }%> 
     <% if(sosdata==0){%> 
-        <div class="card bg-danger text-white " style="width: 16rem;"><div class="card-body"> 
-            SOS Node <p> <h3> Status : SOS
-        </h2></p> </div></div> <br>
-    </div>
-        
+    
+        <div class="card bg-secondary text-white mx-auto" style="width: 16rem;"><div class="card-body"> 
+            SOS Node <p> <h3> Status : OFFLINE </h3>
+            </p> </div></div> <br>
+        </div>
+
     <% }%> 
 
 <% }else{ %> 
