--- a/views/iotSOS.ejs
+++ b/views/iotSOS.ejs
@@ -20,13 +20,9 @@
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-sm-10 ">
-
+  
 <% if(sosdata!=null){ %>
-    
-            
-        
+          
     <% if(sosdata==1){%> 
     
         <div class="card bg-success text-white mx-auto" style="width: 16rem;"><div class="card-body"> 
@@ -38,8 +34,8 @@
     <% }%> 
     <% if(sosdata==0){%> 
     
-        <div class="card bg-secondary text-white mx-auto" style="width: 16rem;"><div class="card-body"> 
-            SOS Node <p> <h3> Status : OFFLINE </h3>
+        <div class="card bg-warning text-white mx-auto" style="width: 16rem;"><div class="card-body"> 
+            SOS Node <p> <h3> Status : SOS </h3>
             </p> </div></div> <br>
         </div>
 
