--- a/views/iotSOS.ejs
+++ b/views/iotSOS.ejs
@@ -35,14 +35,14 @@
     <% if(sosdata==0){%> 
     
         <div class="card bg-warning text-white mx-auto" style="width: 16rem;"><div class="card-body"> 
-            SOS Node <p> <h3> Status : SOS </h3>
+            SOS Node <p> <h3> Status : SOS Alarm!</h3>
             </p> </div></div> <br>
         </div>
 
     <% }%> 
 
 <% }else{ %> 
-    <div class="card bg-secondary text-white " style="width: 16rem;"><div class="card-body"> 
+    <div class="card bg-secondary text-white mx-auto" style="width: 16rem;"><div class="card-body"> 
         SOS Node <p> <h3> Status : OFFLINE 
     </h2></p> </div></div> <br>
 </div>
