--- a/views/iotNoise.ejs
+++ b/views/iotNoise.ejs
@@ -29,7 +29,7 @@
 </div>
     
     <% }else{ %> 
-        <div class="card bg-secondary text-white " style="width: 16rem;"><div class="card-body"> 
+        <div class="card bg-secondary text-white mx-auto" style="width: 16rem;"><div class="card-body"> 
             Noise <p> <h3> Status : OFFLINE 
         </h2></p> </div></div> <br>
     </div>
